--- a/src/assets/scss/setting/_fonts.scss
+++ b/src/assets/scss/setting/_fonts.scss
@@ -1,13 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://websfont.github.io/nanumSquareNeo/nanumSquareNeo.css");
-@import url("https://websfont.github.io/gmarket/gmarket.css");
-
-.mont {
-  font-family: "Montserrat";
-}
-.nanum {
-  font-family: "nanumSquareNeo";
-}
-.gmarket {
-  font-family: "gmarket";
-}
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css");
+@import url("https://use.typekit.net/dbc1ofi.css");
