--- a/src/assets/scss/section/_intro.scss
+++ b/src/assets/scss/section/_intro.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     @include flex($direction: column, $wrap: wrap);
-    li {
+    .nav-space {
       @include flex($justify: center);
       width: 100%;
       height: 100%;
@@ -21,22 +21,35 @@
       font-variation-settings: "wght" 800;
       color: var(--main-color);
       font-size: 12px;
+      transform-style: preserve-3d;
+      perspective: 1200px;
+
+      .nav-content {
+        @include flex($justify: center);
+        transform-style: preserve-3d;
+        perspective: 1200px;
+      }
       a {
         position: absolute;
         font-family: var(--mainEng-font);
         font-variation-settings: "wght" 800;
         color: var(--main-color);
         font-size: 200px;
+        span {
+          color: #278bff;
+        }
       }
     }
   }
   .bg-text {
     @include flex($direction: column);
-    row-gap: px;
-    opacity: 0.1;
+    row-gap: 12px;
+    opacity: 0.4;
     filter: blur(8px);
+    transform: translateZ(-320px);
     h2 {
-      font-size: 132px;
+      font-size: 200px;
+      color: #cfd9e4;
     }
   }
 }
