--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -28,4 +28,5 @@
   background-image: url(../../../assets/img/icon_user.svg);
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
 }
