--- a/src/assets/scss/section/_intro.scss
+++ b/src/assets/scss/section/_intro.scss
@@ -1,4 +1,6 @@
-.home {
+#home {
+  @include flex($justify: center);
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -8,11 +10,13 @@
 .home-nav {
   width: 100%;
   height: 100%;
+  overflow: auto;
   .nav-list {
     position: absolute;
     width: 100%;
     height: 100%;
     @include flex($direction: column, $wrap: wrap);
+    transition: 0.4s;
     .nav-space {
       @include flex($justify: center);
       width: 100%;
@@ -35,8 +39,14 @@
         font-variation-settings: "wght" 800;
         color: var(--main-color);
         font-size: 200px;
-        span {
-          color: #278bff;
+        &:hover {
+          span {
+            transform: scale(1.4);
+            display: inline-block;
+            transform-origin: bottom;
+            transition: 0.2s;
+            transition-timing-function: ease-in-out;
+          }
         }
       }
     }
@@ -52,4 +62,23 @@
       color: #cfd9e4;
     }
   }
+}
+
+.left-arrow,
+.right-arrow {
+  position: absolute;
+  width: 104px;
+  height: 104px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.left-arrow {
+  left: 48px;
+  background-image: url(../../../assets/img/icon_arrow_left.svg);
+}
+.right-arrow {
+  right: 48px;
+  background-image: url(../../../assets/img/icon_arrow_right.svg);
 }
