--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,9 +8,10 @@
 
 // section
 @import "section/header";
-@import "section/intro";
-@import "section/skill";
-@import "section/site";
+@import "section/home";
 @import "section/port";
-@import "section/contact";
 @import "section/footer";
+@import "section/loading";
+@import "section/artmain";
+@import "section/artdetail";
+@import "section/design";
