--- a/src/assets/scss/setting/_fonts.scss
+++ b/src/assets/scss/setting/_fonts.scss
@@ -1,2 +1,51 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css");
 @import url("https://use.typekit.net/dbc1ofi.css");
+
+:root {
+  --mainEng-font: postea-variable;
+  --subEng-font: "organetto-variable";
+  --mainKor-font: "Pretendard";
+}
+
+.mainEng-font {
+  font-family: var(--mainEng-font);
+  font-variation-settings: "wght" 800;
+}
+
+.subEng-font {
+  font-family: var(--subEng-font);
+  font-variation-settings: "wght" 800;
+}
+
+.mainKor-font {
+  font-family: var(--mainKor-font);
+}
+
+h1 {
+  font-size: 200px;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 36px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
+h6 {
+  font-size: 14px;
+}
+
+p {
+  font-size: 12px;
+}
