--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -76,31 +76,6 @@ address {
   font-style: normal;
 }
 
-strong {
-  font-weight: normal;
-}
-
-img {
-  vertical-align: top;
-  width: 100%;
-}
-
-// 스킵메뉴
-#skip a {
-  position: absolute;
-  left: 10px;
-  top: -92px;
-  z-index: 100000;
-  font-size: 1rem;
-  padding: 10px 30px;
-  color: var(--white);
-  background: var(--black);
-}
-#skip a:focus,
-#skip a:active {
-  top: 10px;
-}
-
 html,
 body,
 #root,
@@ -108,5 +83,12 @@ main {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  font-size: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+body {
+  background-color: $bg-color;
 }
